--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   },
   "scripts": {
     "ng": "ng",
-    "start": "ng serve"
+    "start": "ng serve",
+    "pageObjects-firefox": "npx playwright test usePageObjects.spec.ts --project=firefox",
+    "workingWithAPI-firefox": "npx playwright test workingWithAPI.spec.ts --project=firefox"
   },
   "dependencies": {
     "@angular/animations": "^14.2.12",
@@ -58,6 +60,7 @@
     "@angular/compiler-cli": "^14.2.12",
     "@angular/language-service": "14.2.12",
     "@compodoc/compodoc": "^1.1.19",
+    "@faker-js/faker": "^9.8.0",
     "@fortawesome/fontawesome-free": "^5.2.0",
     "@playwright/test": "^1.50.1",
     "@types/leaflet": "1.2.3",
